--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   margin-top: 6rem;
 }
+
+.login-container {
+  width: 400px;
+}
+
+.form {
+  display: flex;
+  border: 1px solid #ddd;
+  flex-direction: column;
+  padding: 20px;
+}
