Add profduct card

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ ul {
   list-style: none;
 }
 
-p {
+/* p {
   font-size: 1.2rem;
   color: #303d46;
 }
@@ -40,4 +40,4 @@ img {
   max-width: 100%;
   height: auto;
   color: aliceblue;
-}
+} */
