--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -82,7 +82,7 @@
   position: absolute;
   top: 386px;
   left: 0;
-  //   width: 265px;
+  width: 335px;
   height: 300px;
   padding: 27px 35px 35px;
   -webkit-transition: all 200ms ease-out;
